--- a/verilog/final_project.qsf
+++ b/verilog/final_project.qsf
@@ -37,7 +37,7 @@
 
 
 set_global_assignment -name FAMILY "MAX 10"
-set_global_assignment -name DEVICE 10M08DAF484C8G
+set_global_assignment -name DEVICE 10M50DAF484C7G
 set_global_assignment -name TOP_LEVEL_ENTITY final_project
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 18.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "05:27:29  JUNE 07, 2019"
@@ -52,6 +52,9 @@ set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name SYSTEMVERILOG_FILE nes/DP_NES.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ps2/sync_ps2.sv
 set_global_assignment -name SYSTEMVERILOG_FILE vcr_remote/sync_counter.sv
 set_global_assignment -name SYSTEMVERILOG_FILE vcr_remote/sync.sv
@@ -61,7 +64,6 @@ set_global_assignment -name SYSTEMVERILOG_FILE vcr_remote/ir_decoder.sv
 set_global_assignment -name SYSTEMVERILOG_FILE vcr_remote/ir_code_decoder.sv
 set_global_assignment -name SYSTEMVERILOG_FILE vcr_remote/counter.sv
 set_global_assignment -name SYSTEMVERILOG_FILE vcr_remote/checksum_validator.sv
-set_global_assignment -name SYSTEMVERILOG_FILE nes/NesReader.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ps2/valid.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ps2/sevenseg.sv
 set_global_assignment -name VERILOG_FILE ps2/PS_2.v
@@ -72,6 +74,4 @@ set_global_assignment -name SYSTEMVERILOG_FILE ps2/compare.sv
 set_global_assignment -name VERILOG_FILE ps2/checker.v
 set_global_assignment -name SYSTEMVERILOG_FILE final_project.sv
 set_global_assignment -name SYSTEMVERILOG_FILE devices_mux.sv
-set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
-set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
